# pineapple-chapter-tool

./: .gitignore  CMakeLists.txt  README.md  chapterinfowidget.cpp  chapterinfowidget.h  chapterinfowidget.ui  chapteritem.cpp  chapteritem.h  chaptertreemanager.cpp  chaptertreemanager.h  chaptertreemodel.cpp  chaptertreemodel.h  chaptertreeview.cpp  chaptertreeview.h  cuefilehandler.cpp  cuefilehandler.h  filehandlerinterface.cpp  filehandlerinterface.h  filehandlermanager.cpp  filehandlermanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mp4filehandler.cpp  mp4filehandler.h  mpegfilehandler.cpp  mpegfilehandler.h  opusfilehandler.cpp  opusfilehandler.h  taglibutils_p.cpp  taglibutils_p.h  vorbisfilehandler.cpp  vorbisfilehandler.h  ytdlfilehandler.cpp  ytdlfilehandler.h
.github/: FUNDING.yml
assets/: pineapple-chapter-tool.rc  resources.qrc
cmake/: FindMp4v2.cmake
